CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(securesockscli VERSION 1.0 DESCRIPTION "socks5tls")

find_package(PkgConfig REQUIRED)

PKG_CHECK_MODULES(GLOG_STATIC REQUIRED IMPORTED_TARGET libglog)
PKG_CHECK_MODULES(OPENSSL_STATIC REQUIRED IMPORTED_TARGET openssl)

ADD_LIBRARY(asio INTERFACE)
TARGET_INCLUDE_DIRECTORIES(asio SYSTEM INTERFACE "../asio-1.16.1/include")

AUX_SOURCE_DIRECTORY(. DIR_SRCS)

ADD_EXECUTABLE(securecli ${DIR_SRCS})

TARGET_LINK_LIBRARIES(securecli 
	asio
	PkgConfig::GLOG_STATIC
 	PkgConfig::OPENSSL_STATIC
	pthread
)
